--- a/index.html
+++ b/index.html
@@ -58,23 +58,23 @@
           </tbody></table>
           <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
 
-    <tr onmouseout="ever_stop()" onmouseover="ever_start()">
+    <tr onmouseout="hyp_stop()" onmouseover="hyp_start()">
       <td style="padding:16px;width:20%;vertical-align:middle">
         <div class="one">
-          <div class="two" id='ever_image'>
+          <div class="two" id='hyp_image'>
 					  <img src='images/publication_preview/hyp-bef.png' width=100%>
 					</div>
           <img src='images/publication_preview/hyp-after.png' width=100%>
         </div>
         <script type="text/javascript">
-          function ever_start() {
-            document.getElementById('ever_image').style.opacity = "1";
+          function hyp_start() {
+            document.getElementById('hyp_image').style.opacity = "1";
           }
 
-          function ever_stop() {
-            document.getElementById('ever_image').style.opacity = "0";
+          function hyp_stop() {
+            document.getElementById('hyp_image').style.opacity = "0";
           }
-          ever_stop()
+          hyp_stop()
         </script>
       </td>
       <td style="padding:8px;width:80%;vertical-align:middle">
@@ -103,7 +103,7 @@
     </tr>
 
     
-    <tr onmouseout="ever_stop()" onmouseover="ever_start()">
+    <tr onmouseout="safeclip_stop()" onmouseover="safeclip_start()">
       <td style="padding:16px;width:20%;vertical-align:middle">
         <div class="one">
           <div class="two" id='safeclip_image'>
@@ -112,14 +112,14 @@
           <img src='images/publication_preview/safeclip-prev-after.jpg' width=100%>
         </div>
         <script type="text/javascript">
-          function ever_start() {
+          function safeclip_start() {
             document.getElementById('safeclip_image').style.opacity = "1";
           }
 
-          function ever_stop() {
+          function safeclip_stop() {
             document.getElementById('safeclip_image').style.opacity = "0";
           }
-          ever_stop()
+          safeclip_stop()
         </script>
       </td>
       <td style="padding:8px;width:80%;vertical-align:middle">
