update links of collaborators

--- a/index.html
+++ b/index.html
@@ -220,14 +220,14 @@
 </span>
         </a>
         <br>
-        <a href="https://seppia978.github.io/">Elena Govi</a>,
-        <a href="https://seppia978.github.io/">Davide Sapienza</a>,
-        <a href="https://seppia978.github.io/">Carmelo Scribano</a>,
+        <a href="https://scholar.google.com/citations?user=SblzAwgAAAAJ&hl=it">Elena Govi</a>,
+        <a href="https://scholar.google.com/citations?user=FQ7tkesAAAAJ&hl=it">Davide Sapienza</a>,
+        <a href="https://scholar.google.com/citations?user=h9VPK0wAAAAJ&hl=it">Carmelo Scribano</a>,
 				<strong>Tobia Poppi</strong>,
-				<a href="https://seppia978.github.io/">Giorgia Franchini</a>, 
-				<a href="https://aimagelab.ing.unimore.it/imagelab/person.asp?idpersona=90">Paola Ardòn</a>, 
-				<a href="https://www.lorenzobaraldi.com/">Micaela Verucchi</a>, 
-				<a href="https://aimagelab.ing.unimore.it/imagelab/person.asp?idpersona=1">Marko Bertogna</a>
+				<a href="https://scholar.google.com/citations?user=yowrAYIAAAAJ&hl=it">Giorgia Franchini</a>, 
+				<a href="https://scholar.google.com/citations?hl=it&user=_0WSCtYAAAAJ">Paola Ardòn</a>, 
+				<a href="https://scholar.google.com/citations?user=mAI66nEAAAAJ&hl=en">Micaela Verucchi</a>, 
+				<a href="https://scholar.google.com/citations?user=ZRrTqs8AAAAJ&hl=it">Marko Bertogna</a>
 				<br>
         <!-- <em>European Conference on Computer Vision</em>,--> 2023
         <br>
