--- a/index.html
+++ b/index.html
@@ -396,14 +396,12 @@
         </td>
       </tr>          
       
-    </tbody></table>
-            
           </tbody></table>
           <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
             <tr>
               <td style="padding:0px">
                 <br>
-                <p style="text-align:right;font-size:small;">
+                <p style="text-align:center;font-size:small;">
                   Website created by Tobia | HTML template forked from <a href="https://github.com/jonbarron/website">Jon Barron</a>
                 </p>
               </td>
