update with new cvpr arxiv and code

--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@
         </script>
       </td>
       <td style="padding:8px;width:80%;vertical-align:middle">
+        <a href="https://arxiv.org/abs/2503.12127"></a>
 			<span class="papertitle">Hyperbolic Safety-Aware Vision-Language Models
 </span>
         </a>
@@ -93,8 +94,11 @@
         <!--<a href="https://">project page</a>-->
         project page coming soon...
         /
-        <!--<a href="https://">arXiv</a>-->
-        arXiv coming soon...
+        <a href="https://arxiv.org/abs/2503.12127">arXiv</a>
+        /
+        <a href="https://github.com/aimagelab/HySAC">code</a>
+        /
+        <a href="https://huggingface.co/aimagelab/HySAC">model</a>
         <p></p>
         <p>
         HySAC, Hyperbolic Safety-Aware CLIP, models hierarchical safety relations to enable effective retrieval of unsafe content, dynamically redirecting it to safer alternatives for enhanced content moderation.
