--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         </script>
       </td>
       <td style="padding:8px;width:80%;vertical-align:middle">
-        <a href="https://arxiv.org/abs/2503.12127"></a>
+        <a href="https://arxiv.org/abs/2503.12127">
 			<span class="papertitle">Hyperbolic Safety-Aware Vision-Language Models
 </span>
         </a>
