--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         </script>
       </td>
       <td style="padding:8px;width:80%;vertical-align:middle">
-        <a href="https://arxiv.org/abs/2503.12127">
+        <a href="https://aimagelab.github.io/HySAC/">
 			<span class="papertitle">Hyperbolic Safety-Aware Vision-Language Models
 </span>
         </a>
@@ -91,8 +91,7 @@
 				<br>
         <em>IEEE/CVF Conference on Computer Vision and Pattern Recognition</em>, 2025
         <br>
-        <!--<a href="https://">project page</a>-->
-        project page coming soon...
+        <a href="https://aimagelab.github.io/HySAC/">project page</a>
         /
         <a href="https://arxiv.org/abs/2503.12127">arXiv</a>
         /
