--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
           hyp_stop()
         </script>
       </td>
-      <td style="padding:8px;width:80%;vertical-align:middle">
+      <td style="padding:8px;width:80%;vertical-align:middle" bgcolor="#ffffd0">
         <a href="https://aimagelab.github.io/HySAC/">
 			<span class="papertitle">Hyperbolic Safety-Aware Vision-Language Models
 </span>
@@ -89,7 +89,7 @@
 				<a href="https://www.lorenzobaraldi.com/">Lorenzo Baraldi</a>, 
 				<a href="https://aimagelab.ing.unimore.it/imagelab/person.asp?idpersona=1">Rita Cucchiara</a>
 				<br>
-        <em>IEEE/CVF Conference on Computer Vision and Pattern Recognition</em>, 2025
+        <em>CVPR</em>, 2025 &nbsp <font color=#FF8080><strong>(Highlight)</strong></font>
         <br>
         <a href="https://aimagelab.github.io/HySAC/">project page</a>
         /
@@ -138,7 +138,7 @@
 				<a href="https://www.lorenzobaraldi.com/">Lorenzo Baraldi</a>, 
 				<a href="https://aimagelab.ing.unimore.it/imagelab/person.asp?idpersona=1">Rita Cucchiara</a>
 				<br>
-        <em>European Conference on Computer Vision</em>, 2024
+        <em>ECCV</em>, 2024
         <br>
         <a href="https://aimagelab.github.io/safe-clip/">project page</a>
         /
