Update author links in publication section

--- a/index.html
+++ b/index.html
@@ -84,15 +84,15 @@
         </a>
         <br>
 				<strong>Tobia Poppi</strong>,
-				<a href="">Burak Uzkent</a>,
-				<a href="">Amanmeet Garg</a>,
-				<a href="">Lucas Porto</a>,
-				<a href="">Garin Kessler</a>,
-				<a href="">Yezhou Yang</a>,
+				<a href="https://uzkent.github.io/">Burak Uzkent</a>,
+				<a href="https://scholar.google.com/citations?user=KYWAOG8AAAAJ&hl=en">Amanmeet Garg</a>,
+				Lucas Porto,
+				Garin Kessler,
+				<a href="https://search.asu.edu/profile/3020558">Yezhou Yang</a>,
 				<a href="https://aimagelab.ing.unimore.it/imagelab/person.asp?idpersona=90">Marcella Cornia</a>,
 				<a href="https://www.lorenzobaraldi.com/">Lorenzo Baraldi</a>,
 				<a href="https://aimagelab.ing.unimore.it/imagelab/person.asp?idpersona=1">Rita Cucchiara</a>,
-				<a href="">Florian Schiffers</a>
+				<a href="https://florianschiffers.com/">Florian Schiffers</a>
 				<br>
         <em>arXiv</em>, 2026
         <br>
